--- a/paginas/albums.html
+++ b/paginas/albums.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,67 @@
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Albums</title>
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-        <img src="../imagenes/logo.png" class="logo">
-    </div>
-    <nav>
-        <ul>
-            <li><a href="../index.html">INICIO</a></li>
-            <li><a href="tour.html">TOUR</a></li>
-            <li><a href="galeria.html">GALERIA</a></li>
-            <li><a href="albums.html">ALBUMS</a></li>
-            <li><a href="opiniones.html">OPINIONES</a></li>
-        </ul>
-    </nav>
+
+    <!-- CABECERA -->
+
+    <header class="header__galeria">
+        <div class="header__logo">
+            <img src="../imagenes/logo.png" class="header__logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html" class="ul__links">INICIO</a></li>
+                <li><a href="tour.html" class="ul__links">TOUR</a></li>
+                <li><a href="galeria.html" class="ul__links">GALERIA</a></li>
+                <li><a href="albums.html" class="ul__links">ALBUMS</a></li>
+                <li><a href="opiniones.html" class="ul__links">OPINIONES</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main></main>
+    <!-- CABECERA -->
+
+    <main class="main__albums">
+
+        <div class="contenedor__albums">
+            <div class="portada1">
+                <h4 class="titulo__portada1">BLURRYFACE</h4>
+            </div>
+            
+            <div class="portada2">
+                <h4 class="titulo__portada2">TRENCH</h4>
+            </div>
+
+            <div class="portada3">
+                <h4 class="titulo__portada3">SCALED AND ICY</h4>
+            </div>
+
+            <div class="portada4">
+                <h4 class="titulo__portada4">VESSEL</h4>
+            </div>
+        </div>
+    </main>
 
 
-    <footer>
+    <!-- PIE DE PAGINA -->
+    <footer class="f_tour">
         <div class="redes">
-        <h1>REDES</h1>
-        <a href="#"><img src="" alt="instagram"></a>
-        <a href="#"><img src="" alt="spotify"></a>
-        <a href="#"><img src="" alt="twitter"></a>
-    </div>
-</footer>
-    
+            <h1 class="redes__titulo">REDES</h1>
+            <ul class="redes__link">
+                <li><a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank"><img
+                            src="../imagenes/ig.png" alt="instagram" class="redes__icono"></a></li>
+                <li><a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img
+                            src="../imagenes/spotify.png" alt="spotify" class="redes__icono"></a></li>
+                <li><a href="https://twitter.com/twentyonepilots" target="_blank"><img src="../imagenes/twitter.png"
+                            alt="twitter" class="redes__icono"></a></li>
+            </ul>
+        </div>
+    </footer>
+
+
+    <!-- PIE DE PAGINA -->
 </body>
+
 </html>
