--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- HEADER -->
 
-<header>
+<header class="header__all">
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
@@ -106,9 +106,9 @@
         <div class="d-flex justify-content-center align-items-center flex-column">
           <h1 class="h1__footer">REDES</h1>
           <div class="w-100">
-            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter m-4 h1"></i></i></a>
-            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram m-4 h1"></i></a>
-            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify m-4 h1"></i></a>
+            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter h1"></i></i></a>
+            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
+            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
           </div>
       </div>
     </div>
