--- a/index.html
+++ b/index.html
@@ -97,25 +97,25 @@
 
 
 
-  <!-- FOOTER -->
+ <!-- FOOTER -->
 
-  <footer class="w-100 h-100">
+ <footer class="w-100 h-100">
 
-    <div class="container">
-      <div class="row d-flex justify-content-center align-items-center p-0 m-0">
-        <div class="d-flex justify-content-center align-items-center flex-column">
-          <h1 class="h1__footer">REDES</h1>
-          <div class="w-100">
-            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter h1"></i></i></a>
-            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
-            <a href="#" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
-          </div>
-      </div>
+  <div class="container">
+    <div class="row d-flex justify-content-center align-items-center p-0 m-0">
+      <div class="d-flex justify-content-center align-items-center flex-column">
+        <h1 class="h1__footer">REDES</h1>
+        <div class="w-100">
+          <a href="https://twitter.com/twentyonepilots" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter h1"></i></i></a>
+          <a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
+          <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
+        </div>
     </div>
+  </div>
 
-  </footer>
+</footer>
 
-  <!-- FOOTER -->
+<!-- FOOTER -->
 
 
 
