--- a/paginas/tour.html
+++ b/paginas/tour.html
@@ -98,24 +98,25 @@
         </div>
     </main>
 
-    <footer class="w-100 h-100">
-        <div class="container">
-            <div class="row d-flex justify-content-center align-items-center p-0 m-0">
-                <div class="d-flex justify-content-center align-items-center flex-column">
-                    <h1 class="h1__footer">REDES</h1>
-                    <div class="iconos__footer">
-                        <a href="#" target="_blank" class="icono_footer m-5"><i
-                                class="fa-brands fa-twitter h1"></i></i></a>
-                        <a href="#" target="_blank" class="icono_footer m-5"><i
-                                class="fa-brands fa-instagram h1"></i></a>
-                        <a href="#" target="_blank" class="icono_footer m-5"><i
-                                class="fa-brands fa-spotify h1"></i></a>
-                    </div>
-                </div>
-            </div>
-    </footer>
-
     <!-- FOOTER -->
+
+  <footer class="w-100 h-100">
+
+    <div class="container">
+      <div class="row d-flex justify-content-center align-items-center p-0 m-0">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+          <h1 class="h1__footer">REDES</h1>
+          <div class="w-100">
+            <a href="https://twitter.com/twentyonepilots" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter h1"></i></i></a>
+            <a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
+            <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
+          </div>
+      </div>
+    </div>
+
+  </footer>
+
+  <!-- FOOTER -->
 
 </body>
 
