--- a/paginas/albums.html
+++ b/paginas/albums.html
@@ -56,6 +56,10 @@
 
     <main class="main__albums">
 
+      <div class="contenedor__album">
+        <h1 class="album__titulo">ALBUMS</h1>
+      </div>
+
         <div class="container">
             <div class="row d-flex justify-content-center">
 
