--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://www.dafontfree.net/embed/Y29tcGFjdGEtYmxrLWJ0LWJsYWNrJmRhdGEvMjQvYy8xMTkyOTMvY29tcGN0YWsudHRm" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../css/estilo.css">
     <title>TOUR</title>
@@ -13,22 +18,42 @@
 <body class="contenedor_layout_galeria">
 
 
-    <!--   CABECERA DISEÑO  -->
-    <header>
-        <div class="header__logo">
-            <img src="../imagenes/logo.png" class="header__logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html" class="ul__links">INICIO</a></li>
-                <li><a href="../paginas/tour.html" class="ul__links">TOUR</a></li>
-                <li><a href="galeria.html" class="ul__links">GALERIA</a></li>
-                <li><a href="../paginas/albums.html" class="ul__links">ALBUMS</a></li>
-                <li><a href="../paginas/opiniones.html" class="ul__links">OPINIONES</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--   CABECERA DISEÑO  -->
+   <!-- HEADER -->
+
+<header class="header__all">
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" class="imagen__logo img-fluid" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link m-3 h4" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-3 h4" href="tour.html">TOUR</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-3 h4" href="albums.html">ALBUMS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-3 h4" href="galeria.html">GALERIA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-3 h4" href="opiniones.html">OPINIONES</a>
+            </li>
+          </div>
+      </div>
+    </nav>
+
+  </header>
+
+    <!-- HEADER -->
+
 
 
     <!-- MAIN DISEÑO -->
@@ -66,7 +91,7 @@
         <h1 class="galeria__titulo"><span class="topM2">TOP</span> <span class="topM3">2015</span></h1>
 
      
-            <div class="galeria__flex">
+            <div class="galeria__flex mx-auto mb-5 ">
             <img src="../imagenes/topimg9.png" class="img__galeriaT">
             <img src="../imagenes/topimg10.png" class="img__galeriaT">
             <img src="../imagenes/TOP15.jpg" class="img__galeriaT">
@@ -78,21 +103,36 @@
     <!-- MAIN DISEÑO -->
 
 
+<!-- FOOTER -->
 
+<footer class="w-100 h-100">
 
-    <footer>
-        <div class="redes">
-            <h1 class="redes__titulo">REDES</h1>
-            <ul class="redes__link">
-            <li><a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank"><img src="../imagenes/ig.png" alt="instagram" class="redes__icono"></a></li>
-            <li><a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img src="../imagenes/spotify.png" alt="spotify" class="redes__icono"></a></li>
-            <li><a href="https://twitter.com/twentyonepilots" target="_blank"><img src="../imagenes/twitter.png" alt="twitter" class="redes__icono"></a></li>
-        </ul>
-        </div>
-    </footer>
+    <div class="container">
+      <div class="row d-flex justify-content-center align-items-center p-0 m-0">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+          <h1 class="h1__footer">REDES</h1>
+          <div class="w-100">
+            <a href="https://twitter.com/twentyonepilots" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter h1"></i></i></a>
+            <a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
+            <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
+          </div>
+      </div>
+    </div>
+
+  </footer>
+
+  <!-- FOOTER -->
 
 
 
 </body>
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 
 </html>
