--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Opiniones</title>
@@ -15,98 +18,115 @@
 
 <body>
 
-    <!-- CABECERA -->
+    <!-- HEADER -->
 
-    <header class="header__galeria">
-        <div class="header__logo">
-            <img src="../imagenes/logo.png" class="header__logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html" class="ul__links">INICIO</a></li>
-                <li><a href="tour.html" class="ul__links">TOUR</a></li>
-                <li><a href="galeria.html" class="ul__links">GALERIA</a></li>
-                <li><a href="albums.html" class="ul__links">ALBUMS</a></li>
-                <li><a href="opiniones.html" class="ul__links">OPINIONES</a></li>
-            </ul>
+    <header class="header__all">
+
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="../imagenes/logo.png" class="imagen__logo img-fluid"
+                        alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link m-3 h4" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-3 h4" href="tour.html">TOUR</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-3 h4" href="albums.html">ALBUMS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-3 h4" href="galeria.html">GALERIA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-3 h4" href="opiniones.html">OPINIONES</a>
+                        </li>
+                </div>
+            </div>
         </nav>
+
     </header>
 
-    <!-- CABECERA -->
+    <!-- HEADER -->
 
 
-    <main class="container-fluid">
-        <!-- <div class="contenedor">
-            <h1>OPINIONES</h1>
-            <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
-        </div> -->
+    <!-- MAIN -->
+    <main class="main__opiniones">
+        
 
-        <form class="containter-fluid">
+
+        <div class="container-fluid">
+
+            <h1 class="opiniones__titulo">OPINIONES</h1>
+            <p class="opiniones__titulo">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+        </div>
+
+        <div class="contenedor__form">
+
+        <form class="containter-fluid d-flex justify-content-center flex-column">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="escribi tu nombre aca">
-              </div>
-              <div class="mb-3">
+                <input type="text" class="form-control" id="exampleFormControlInput1"
+                    placeholder="escribi tu nombre aca">
+            </div>
+            <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="escribi tu email aca">
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">MENSAJE</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="escribi tu mensaje aca"></textarea>
-              </div>
-          </form>
-
-
-       <!--  <form action="">
-            <div class="nombre">
-                <label for="nombre">
-                    <p>Nombre:</p>
-                </label>
-                <input type="text" placeholder="ingresa tu nombre aqui" name="nombre">
+                <input type="email" class="form-control" id="exampleFormControlInput1"
+                    placeholder="escribi tu email aca">
             </div>
-            <div class="email">
-                <label for="email">
-                    <p>Email:</p>
-                </label>
-                <input type="email" placeholder="ingresa tu email aqui" name="email">
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="escribi tu mensaje aca"></textarea>
             </div>
-            <div class="mensaje">
-                <label for="mensaje">
-                    <p>Mensaje:</p>
-                </label>
-                <textarea name="mensaje" cols="30" rows="10" placeholder="ingresa tu mensaje aqui"></textarea>
-            </div>
-            <div class="enviar">
-                <input type="submit" value="enviar">
-            </div>
-        </form> -->
-    </main>
-
-
-    <!-- PIE DE PAGINA -->
-    <footer class="f_opiniones">
-        <div class="redes">
-            <h1 class="redes__titulo">REDES</h1>
-            <ul class="redes__link">
-                <li><a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank"><img
-                            src="../imagenes/ig.png" alt="instagram" class="redes__icono"></a></li>
-                <li><a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img
-                            src="../imagenes/spotify.png" alt="spotify" class="redes__icono"></a></li>
-                <li><a href="https://twitter.com/twentyonepilots" target="_blank"><img src="../imagenes/twitter.png"
-                            alt="twitter" class="redes__icono"></a></li>
-            </ul>
+            <button type="submit" class="btn__opiniones">ENVIAR</button>
         </div>
+        </form>
+
+        <!-- MAIN -->
+
+
+
+    <!-- FOOTER -->
+
+    <footer class="w-100 h-100">
+
+        <div class="container">
+            <div class="row d-flex justify-content-center align-items-center p-0 m-0">
+                <div class="d-flex justify-content-center align-items-center flex-column">
+                    <h1 class="h1__footer">REDES</h1>
+                    <div class="w-100">
+                        <a href="https://twitter.com/twentyonepilots" target="_blank" class="icono_footer m-5"><i
+                                class="fa-brands fa-twitter h1"></i></i></a>
+                        <a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank"
+                            class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
+                        <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"
+                            class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
+                    </div>
+                </div>
+            </div>
+
     </footer>
 
-
-    <!-- PIE DE PAGINA -->
-
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
+    <!-- FOOTER -->
 
 
 </body>
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 
 </html>
