--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
  <!-- FOOTER -->
 
- <footer class="w-100 h-100">
+ <footer class="f__index">
 
   <div class="container">
     <div class="row d-flex justify-content-center align-items-center p-0 m-0">
