--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -70,9 +70,8 @@
 
         <div class="container-fluid">
 
-            <h1 class="opiniones__titulo">OPINIONES</h1>
-            <p class="opiniones__titulo">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit
-                amet.</p>
+            <h1 class="opiniones__titulos">OPINIONES</h1>
+            <p class="opiniones__titulo">Nos interesa conocer tu opinion acerca de la banda, Deja tus datos y escribi tu mensaje!</p>
         </div>
 
         <div class="contenedor__form">
