--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="icon" type="image/x-icon" href="/imagenes/logo.png">
   <link rel="stylesheet" href="css/main.css">
   <title>Twenty one pilots biografia</title>
 
-  
+
   <meta name="keywords" content="Tyler Joseph, Josh Dun, dúo musical, twentyonepilots, ">
 
-  <meta name="description" content="Twenty One Pilots es un dúo musical estadounidense originario de Columbus, Ohio, Estados Unidos, integrado por Tyler Joseph y Josh Dun.">
+  <meta name="description"
+    content="Twenty One Pilots es un dúo musical estadounidense originario de Columbus, Ohio, Estados Unidos, integrado por Tyler Joseph y Josh Dun.">
 
 
 </head>
@@ -28,7 +30,7 @@
 
   <!-- HEADER -->
 
-<header class="header__all">
+  <header class="header__all">
 
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
@@ -54,49 +56,49 @@
             <li class="nav-item">
               <a class="nav-link m-3 h4" href="paginas/opiniones.html">OPINIONES</a>
             </li>
-          </div>
+        </div>
       </div>
     </nav>
 
   </header>
 
-    <!-- HEADER -->
+  <!-- HEADER -->
 
 
-    <!-- MAIN -->
+  <!-- MAIN -->
 
 
-    <main class="main__index d-flex">
+  <main class="main__index d-flex">
 
-      <div class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="flex-column text-center">
-          <h1 class="text-light h1 p-4">TWENTY ONE PILOTS</h1>
-          <h3 class="text-light p-4">BIOGRAFIA</h3>
-        </div>
+    <div class="container-fluid d-flex justify-content-center align-items-center">
+      <div class="flex-column text-center">
+        <h1 class="text-light h1 p-4">TWENTY ONE PILOTS</h1>
+        <h3 class="text-light p-4">BIOGRAFIA</h3>
       </div>
+    </div>
 
-    </main>
+  </main>
 
-    <!-- MAIN -->
+  <!-- MAIN -->
 
 
-    <!-- SECTION -->
-    <section class="section__index d-flex">
+  <!-- SECTION -->
+  <section class="section__index d-flex">
 
-      <div class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="d-flex flex-row-reverse">
+    <div class="container-fluid d-flex justify-content-center align-items-center">
+      <div class="d-flex flex-row-reverse">
 
-          <img src="imagenes/p2.png" class="d-flex justify-content-center align-items-center m-5" alt="">
+        <img src="imagenes/p2.png" class="d-flex justify-content-center align-items-center m-5" alt="">
 
-          <p class="text-center m-5 h2 d-flex align-items-center w-100">
-            Twenty One Pilots es un dúo musical estadounidense originario de Columbus, Ohio, Estados Unidos, integrado
-            por Tyler Joseph y Josh Dun. Alcanzaron éxito al presentarse en grandes festivales como Lollapalooza,
-            Bonnaroo, Boston Calling y Firefly.
-          </p>
+        <p class="text-center m-5 h2 d-flex align-items-center w-100">
+          Twenty One Pilots es un dúo musical estadounidense originario de Columbus, Ohio, Estados Unidos, integrado
+          por Tyler Joseph y Josh Dun. Alcanzaron éxito al presentarse en grandes festivales como Lollapalooza,
+          Bonnaroo, Boston Calling y Firefly.
+        </p>
 
-        </div>
       </div>
-  </div>
+    </div>
+    </div>
 
   </section>
 
@@ -104,25 +106,28 @@
 
 
 
- <!-- FOOTER -->
+  <!-- FOOTER -->
 
- <footer class="f__index">
+  <footer class="f__index">
 
-  <div class="container">
-    <div class="row d-flex justify-content-center align-items-center p-0 m-0">
-      <div class="d-flex justify-content-center align-items-center flex-column">
-        <h1 class="h1__footer">REDES</h1>
-        <div class="w-100">
-          <a href="https://twitter.com/twentyonepilots" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-twitter h1"></i></i></a>
-          <a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-instagram h1"></i></a>
-          <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank" class="icono_footer m-5"><i class="fa-brands fa-spotify h1"></i></a>
+    <div class="container">
+      <div class="row d-flex justify-content-center align-items-center p-0 m-0">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+          <h1 class="h1__footer">REDES</h1>
+          <div class="w-100">
+            <a href="https://twitter.com/twentyonepilots" target="_blank" class="icono_footer m-5"><i
+                class="fa-brands fa-twitter h1"></i></i></a>
+            <a href="https://www.instagram.com/twentyonepilots/?hl=es-la" target="_blank" class="icono_footer m-5"><i
+                class="fa-brands fa-instagram h1"></i></a>
+            <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank" class="icono_footer m-5"><i
+                class="fa-brands fa-spotify h1"></i></a>
+          </div>
         </div>
-    </div>
-  </div>
+      </div>
 
-</footer>
+  </footer>
 
-<!-- FOOTER -->
+  <!-- FOOTER -->
 
 
 
@@ -130,11 +135,9 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-crossorigin="anonymous"></script>
+  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-crossorigin="anonymous"></script>
+  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 
 
