--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="icon" type="image/x-icon" href="/imagenes/logo.png">
     <link rel="stylesheet" href="../css/main.css">
     <title>Opiniones</title>
 
@@ -71,7 +71,8 @@
         <div class="container-fluid">
 
             <h1 class="opiniones__titulos">OPINIONES</h1>
-            <p class="opiniones__titulo">Nos interesa conocer tu opinion acerca de la banda, Deja tus datos y escribi tu mensaje!</p>
+            <p class="opiniones__titulo">Nos interesa conocer tu opinion acerca de la banda, Deja tus datos y escribi tu
+                mensaje!</p>
         </div>
 
         <div class="contenedor__form">
