--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -12,6 +12,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://www.dafontfree.net/embed/Y29tcGFjdGEtYmxrLWJ0LWJsYWNrJmRhdGEvMjQvYy8xMTkyOTMvY29tcGN0YWsudHRm"
     rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/x-icon" href="/imagenes/logo.png">
   <link rel="stylesheet" href="../css/main.css">
   <title>GALERIA</title>
 
